2004-11-28  Jack O'Quin  <joq@io.com>

	* removed deprecated function jack_set_server_dir().

2004-11-27  Jack O'Quin  <joq@io.com>

	* new API functions: jack_internal_client_handle(),
	jack_internal_client_load(), jack_get_internal_client_name(),
	jack_internal_client_unload().  See: <jack/intclient.h>.

2004-10-14  Jack O'Quin  <joq@io.com>

	* new API function: jack_get_xrun_delayed_usecs()

2004-10-08  Jack O'Quin  <joq@io.com>

	* new API functions: jack_client_open(), jack_get_client_name()

2004-09-15  Jack O'Quin  <joq@io.com>

	* new API functions from <jack/thread.h>

2004-07-08  Jack O'Quin  <joq@io.com>

	* add jack_ringbuffer_peek()

2004-02-19  Jack O'Quin  <joq@io.com>

	* new API functions:

	  int jack_client_name_size(void);
	  int jack_port_name_size(void);
	  int jack_port_type_size(void);

2004-02-16  Jack O'Quin  <joq@io.com>

	* Changed JACK_PORT_NAME_SIZE from 32 to 256

	This could affect some client that defines its own value.

2003-10-15  Paul Davis <paul@linuxaudiosystems.com>

	* new ring buffer interface: <jack/ringbuffer.h>

2003-10-07  Paul Davis <paul@linuxaudiosystems.com>

	* new function jack_set_freewheel().

	No compatibility issues: this introduces new functionality to 
	JACK and doesn't alter any existing functionality.

2003-09-18  Jack O'Quin  <joq@io.com>

	* new function jack_set_buffer_size().  

	Compatibility issues: programs that rely on the buffer size but do
	not register a callback will fail.  Cached output buffer addresses
	are not valid after the buffer size changes.  These rules existed
	before, but were never enforced.

2003-08-26  Jack O'Quin  <joq@io.com>

	* <jack/types.h> typedefs are now defined using the C99 standard
	fixed-size integer typedefs.  These new typedefs are binary
	compatible with 32-bit platforms, but not 64-bit machines.  

	Programs using printf on these values will get GCC compiler
	warnings.  To suppress the warnings, use the corresponding C99