@@ -756,6 +756,21 @@ jack_nframes_t jack_last_frame_time (const jack_client_t *client);
 float jack_cpu_load (jack_client_t *client);
 
 /**
+ * @return the maximum delay reported by the backend since
+ * startup or reset.  When compared to the period size in usecs, this
+ * can be used to estimate the ideal period size for a given setup.
+ */
+float jack_get_max_delayed_usecs (jack_client_t *client);
+
+/**
+ * Reset the maximum delay counter.  This would be useful
+ * to estimate the effect that a change to the configuration of a running
+ * system (e.g. toggling kernel preemption) has on the delay
+ * experienced by JACK, without having to restart the JACK engine.
+ */
+void jack_reset_max_delayed_usecs (jack_client_t *client);
+	
+/**
  * @return the pthread ID of the thread running the JACK client side
  * code.
  */
